--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Titulo do site</h1>
+            <h1>Cursos Gratis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto do artigo</p>
+            <h2>Curso HTML 5 CSS 3</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis nesciunt asperiores rerum accusamus, obcaecati omnis sapiente. Ab rem facere, doloremque natus est aliquam dolore quasi laborum voluptate ratione nam vero.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto artigo 002</p>
+            <h2>Curso JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae tempora aut accusantium. Autem excepturi porro nobis molestiae esse perferendis labore tenetur, in libero amet quos nesciunt necessitatibus sequi facere quia.</p>
         </article>
     </main>
     
